# MeetFlow-AI-

./: .dockerignore  .env.example  .gitignore  AI_Meeting_System_MVP.md  Dockerfile  Dockerfile.worker  README.md  analyze.py  audio.py  bot.py  docker-compose.yml  main.py  notion_mcp_server.py  notion_tool.py  podman-compose.yml  pyproject.toml  requirements.txt  transcribe.py
app/: config.py  main.py
app/api/: routes_approval.py  routes_bot.py  routes_health.py  routes_hitl.py  routes_meeting.py  routes_rag.py
app/graph/: builder.py  orchestrator.py  state.py
app/hitl/: adaptive_cards.py  gate.py
app/models/: enums.py  schemas.py
app/persistence/: audit_log.py  database.py  hitl_store.py
app/services/: email_client.py  jira_client.py  notion_client.py  rag.py  redis_queue.py  tavily_client.py  teams_bot.py  (+1 more)
bot/: .dockerignore  .env.example  Dockerfile  HOW_TO_USE.md  README.md  __init__.py  entrypoint.sh  main.py  pipeline.py  pyproject.toml  requirements.txt
bot/bot/: __init__.py  joiner.py
bot/captions/: __init__.py  captions.py
bot/tests/: test_joiner_parse.py  test_writer.py
frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
notebooks/: part_c.ipynb  test.ipynb
prompts/: classifier.txt  email_participant.txt  email_stakeholder.txt  notetaker.txt  researcher.txt  task_extractor.txt
tests/: conftest.py  test_api.py  test_email_drafter.py  test_hitl.py  test_notetaker.py  test_orchestrator.py  test_rag.py  test_researcher.py  test_task_extractor.py
(+36 files in other folders)
