[project]
name = "meetflow-bot"
version = "2.0.0"
description = "MeetFlow-AI Meeting Bot — Vision-guided Teams joiner with browser caption scraping"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "groq>=1.5.0",
    "httpx>=0.27.0",
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
